--- a/frontendd/src/Styles/ContactDetails.scss
+++ b/frontendd/src/Styles/ContactDetails.scss
@@ -1,6 +1,7 @@
 #ContactDetails.ContactDetails {
   width: 40%;
   border: 1px solid rgb(202, 198, 198);
+  // border: 1px solid #5e5e5e;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -12,24 +13,26 @@
     text-decoration: none;
     color: white;
   }
-  .back-btn{
+  .back-btn {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
 
-        i {
-            padding: 10px;
-            background: green;
-            border-radius: 50px;
-            cursor: pointer;
-          }
-    
+    i {
+      padding: 10px;
+      background: green;
+      border-radius: 50px;
+      cursor: pointer;
+    }
   }
   .ContactDetails-logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
     i {
       padding: 15px;
       border-radius: 50%;
-      border: 1px solid rgb(214, 215, 214);
+      border: 1px solid #5e5e5e;
       color: gray;
       font-size: 50px;
     }
@@ -40,8 +43,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    border: 1px solid rgb(209, 209, 209);
     border-radius: 4px;
+    background: #3a3a3a;
+    border: 1px solid #5e5e5e;
     i {
       padding: 10px;
       background: green;
@@ -56,8 +60,9 @@
     align-items: center;
     padding: 10px;
     border: 1px solid;
-    border: 1px solid rgb(209, 209, 209);
     border-radius: 4px;
+    background: #3a3a3a;
+    border: 1px solid #5e5e5e;
     span {
       font-weight: 500;
     }
@@ -69,21 +74,31 @@
   }
   .address {
     // width: 50%;
-    border: 1px solid rgb(209, 209, 209);
     border-radius: 4px;
     padding: 10px;
-    p{
-        width: 50%;
+    background: #3a3a3a;
+    border: 1px solid #5e5e5e;
+    p {
+      width: 50%;
+    }
+  }
+  .fav {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 15px;
+    i {
+      padding: 10px;
+      background: green;
+      border-radius: 50px;
+      cursor: pointer;
     }
   }
 }
 
-
-
 @media (max-width: 768px) {
-    #ContactDetails.ContactDetails {
-        width: 100%;
-        padding: 20px;
-    }
-
+  #ContactDetails.ContactDetails {
+    width: 100%;
+    padding: 20px;
+  }
 }
