--- a/frontendd/src/Styles/ContactList.scss
+++ b/frontendd/src/Styles/ContactList.scss
@@ -17,20 +17,23 @@
     color: white;
   }
   .contact-data {
-    border: 1px solid rgb(211, 209, 209);
+    border: 1px solid #5e5e5e;
     display: grid;
     grid-template-columns: 10% 70% 10%;
     align-items: center;
     gap: 15px;
     padding: 10px;
     border-radius: 12px;
+    background: #3a3a3a;
+    filter: drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.15));
+
     .logo {
-      border: 1px solid rgb(213, 213, 213);
+      border: 1px solid #5e5e5e;
       padding: 10px;
       border-radius: 50%;
       text-align: center;
       i {
-        color: gray;
+        color: rgb(196, 196, 196);
       }
     }
     .forward-ico {
