--- a/frontendd/src/Styles/EditContact.scss
+++ b/frontendd/src/Styles/EditContact.scss
@@ -29,7 +29,7 @@
     i {
         padding: 15px;
         border-radius: 50%;
-        border: 1px solid rgb(214, 215, 214);
+        border: 1px solid #5e5e5e;
         color: gray;
         font-size: 50px;
       }
@@ -40,7 +40,11 @@
   input {
     padding: 10px;
     width: 100%;
-    border-radius: 12px;
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    background: #3a3a3a;
+    border: 1px solid #5e5e5e;
   }
   button {
     padding: 10px;
