--- a/frontendd/src/Styles/AddContact.scss
+++ b/frontendd/src/Styles/AddContact.scss
@@ -50,6 +50,8 @@
       border-radius: 8px;
       background: #3a3a3a;
     border: 1px solid #5e5e5e;
+    font-weight: bold;
+    color: white;
     }
     button {
       padding: 10px;
